# interop-tokens

./: .gitignore  .gitmodules  README.md  foundry.toml  packet-structure.md
.github/workflows/: foundry-ci.yml
client/: .env.example  package-lock.json  package.json
client/app/: dashboard.tsx  layout.tsx  page.tsx
client/artifacts/: InteropToken.json
contracts/: LICENSE
contracts/script/: DeployInteropToken.s.sol
contracts/src/: InteropToken.sol  InteropTokenFactory.sol  TokenStorage.sol
contracts/src/interface/: IImplementationAuthority.sol  IProxy.sol
contracts/src/proxy/: AbstractProxy.sol  ImplementationAuthority.sol  TokenProxy.sol
contracts/test/: InteropToken.t.sol  InteropTokenFactory.t.sol  ProxyInteropToken.t.sol
erc7683-relayer/: .env  Cargo.toml
erc7683-relayer/abi/: InteropToken.json
erc7683-relayer/src/: 1st iteration.rs  2nd iteration.rs  3rd iteration.rs  main.rs
script/: Counter.s.sol  DeployInteropToken.s.sol
src/: ERC7683.sol  InteropToken.sol  InteropTokenFactory.sol  TokenStorage.sol
src/interface/: IInteropToken.sol  IToken.sol
src/proxy/: AbstractProxy.sol  TokenProxy.sol  TokenProxyFactory.sol
test/: InteropToken.t.sol  InteropTokenFactory.t.sol  ProxyInteropToken.t.sol
